--- a/loans.yml
+++ b/loans.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 loan:
-  message: "Welcome to EazyBank cards related local APIs"
+  message: "Welcome to EazyBank loans related local APIs"
   contact-details:
     name: "Emirhan Baran - Developer"
     email: "emir.baran255@gmai.com"
