--- a/loans.yml
+++ b/loans.yml
@@ -5,7 +5,7 @@ loan:
   message: "Welcome to EazyBank loans related local APIs"
   contact-details:
     name: "Emirhan Baran - Developer"
-    email: "emir.baran@gmail.com"
+    email: "emir.baran2555@gmail.com"
   on-call-support:
     - 05323123514
     - 45125125512
