--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "2.0"
 
-accounts:
+cards:
   message: "Welcome to EazyBank cards related QA APIs"
   contact-details:
     name: "John Doe- QA Lead"
