--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@
 build:
   version: "1.0"
 
-accounts:
+loans:
   message: "Welcome to EazyBank loans related prod APIs"
   contact-details:
     name: "John Doe- Prod Lead"
