--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 
-accounts:
+loans:
   message: "Welcome to EazyBank loans related QA APIs"
   contact-details:
     name: "John Doe- QA Lead"
