--- a/loans.yml
+++ b/loans.yml
@@ -1,7 +1,7 @@
 build:
   version: "3.0"
 
-loan:
+loans:
   message: "Welcome to EazyBank loans related local APIs"
   contact-details:
     name: "Emirhan Baran - Developer"
