--- a/cards.yml
+++ b/cards.yml
@@ -5,7 +5,7 @@ cards:
   message: "Welcome to EazyBank cards related local APIs"
   contact-details:
     name: "Emirhan Baran - Developer"
-    email: "emir.baran255@gmai.com"
+    email: "emir.baran255@gmail.com"
   on-call-support:
     - 05323123514
     - 45125125512
