--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -5,7 +5,7 @@ loans:
   message: "Welcome to EazyBank loans related QA APIs"
   contact-details:
     name: "John Doe- QA Lead"
-    email: "john2322@gmail.com"
+    email: "john@gmail.com"
   on-call-support:
-    - 05144305121
-    - 2132412411123
+    - 054124333311
+    - 988712411123
